k8s/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: resource-management
  name: resource-management
  labels:
    app: resource-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resource-management
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: resource-management
    spec:
      containers:
      - name: resource-management
        image: docker.io/g420/resource-management:1.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /api/actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/actuator/health
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 15
