k8s/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: resource-management
  name: resource-management-service
  labels:
    app: resource-management
spec:
  selector:
    app: resource-management
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP  # Change to NodePort or LoadBalancer if needed
